k8s/base/storybook/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-storybook
  labels:
    name: hhb-storybook
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hhb-storybook
  template:
    metadata:
      labels:
        name: hhb-storybook
    spec:
      containers:
        - name: hhb-storybook
          image: storybook
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /
              port: http
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 12Mi
