k8s/base/storybook/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hhb-storybook
  labels:
    name: hhb-storybook
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
  selector:
    name: hhb-storybook
