k8s/base/storybook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-storybook-ingress
  labels:
    name: hhb-storybook-ingress
spec:
  rules:
    - host: sb-${APP_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hhb-storybook
                port:
                  number: 80
